<resources>
    <string name="app_name"></string>
    <string name="c">C</string>
    <string name="brackets">( )</string>
    <string name="div">/</string>
    <string name="lt"><![CDATA[<--]]></string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_settings" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>